grafana-httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  annotations:
  labels:
    app: grafana
  name: grafana-httpproxy
  namespace: tanzu-system-dashboards
spec:
  routes:
  - conditions:
    - prefix: /
    pathRewritePolicy:
      replacePrefix:
      - prefix: /
        replacement: /
    services:
    - name: grafana
      port: 80
  virtualhost:
    fqdn: grafana.gc.vmwire.com
    tls:
      secretName: grafana-tls
