prometheus-httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  annotations:
  labels:
    app: prometheus
  name: prometheus-httpproxy
  namespace: tanzu-system-monitoring
spec:
  routes:
  - conditions:
    - prefix: /
    pathRewritePolicy:
      replacePrefix:
      - prefix: /
        replacement: /
    services:
    - name: prometheus-server
      port: 80
  - conditions:
    - prefix: /alertmanager/
    pathRewritePolicy:
      replacePrefix:
      - prefix: /alertmanager/
        replacement: /
    services:
    - name: alertmanager
      port: 80
  virtualhost:
    fqdn: prometheus.gc.vmwire.com
    tls:
      secretName: prometheus-tls
